k8s/mule-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: 370687047370.dkr.ecr.us-east-1.amazonaws.com/mulesoft-connector-app-non-prod
      ports:
        - containerPort: 3000
  imagePullSecrets:
    - name: regcred
