k8s/elb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ingress-nginx-controller
  type: LoadBalancer
