k8s/mule-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 3000
      nodePort: 31516
  selector:
    component: web
# apiVersion: v1
# kind: Service
# metadata:
#   name: mulesoft-node-port
# spec:
#   type: NodePort
#   ports:
#     - port: 3050
#       targetPort: 3000
#       nodePort: 31515
#   selector:
#     component: mule
