k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - host: hello-world.info
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: fe-clusterip-service
#                 port:
#                   number: 80
#           - path: /api/?(.*)
#             # UPDATE PATH
#             pathType: Prefix
#             # ADD PATHTYPE
#             backend:
#               service:
#                 # UPDATE SERVICE FIELDS
#                 name: mule-clusterip-service
#                 port:
#                   number: 3000

# apiVersion: networking.k8s.io/v1
# # UPDATE API
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: 'nginx'
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#     # ADD ANNOTATION
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     # UPDATE ANNOTATION
# spec:
#   ingressClassName: 'nginx'
#   rules:
#     - host: hello-world.info
#       http:
#         paths:
#           - path: /?(.*)
#             # UPDATE PATH
#             pathType: Prefix
#             # ADD PATHTYPE
#             backend:
#               service:
#                 # UPDATE SERVICE FIELDS
#                 name: fe-clusterip-service
#                 port:
#                   number: 80
#           - path: /api/?(.*)
#             # UPDATE PATH
#             pathType: Prefix
#             # ADD PATHTYPE
#             backend:
#               service:
#                 # UPDATE SERVICE FIELDS
#                 name: mule-clusterip-service
#                 port:
#                   number: 3000
